--- a/.gitignore
+++ b/.gitignore
@@ -358,11 +358,14 @@ xcuserdata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
+# Unity
 /Unity/UnityDemo/Library
 /Unity/UnityDemo/Assembly-CSharp.csproj
 /Unity/UnityDemo/UnityDemo.sln
 /Unity/UnityDemo/Logs/
-/Unity/UnityDemo/Assets/Plugins/AirsimWrapper.dll
+/Unity/linux-build
+/Unity/UnityDemo/Assets/Plugins
+/Unity/UnityDemo/Packages
 
 # ROS
 ros/.catkin_tools/
