--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ matrix:
       
     - name: Windows 10
       os: windows
-    
+      env:
+        - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
         
 
     # OS X CMake
