Add Boost library in Unity CMakeLists

--- a/Unity/AirLibWrapper/AirsimWrapper/CMakeLists.txt
+++ b/Unity/AirLibWrapper/AirsimWrapper/CMakeLists.txt
@@ -7,6 +7,16 @@ endif()
 find_path(AIRSIM_ROOT NAMES AirSim.sln PATHS ".." "../.." "../../.." "../../../.." "../../../../.." "../../../../../..")
 message(AirSim Root directory: ${AIRSIM_ROOT})
 
+find_package(Boost REQUIRED COMPONENTS filesystem)
+if(Boost_FOUND)
+	MESSAGE("Boost information:") 
+	MESSAGE("  Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}") 
+	MESSAGE("  Boost_LIBRARIES: ${Boost_LIBRARIES}") 
+	MESSAGE("  Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}") 
+	MESSAGE("  Boost_FILESYSTEM_LIBRARY: ${boost_filesystem_DIR}")
+
+include_directories(${Boost_INCLUDE_DIRS}) 
+
 LIST(APPEND CMAKE_MODULE_PATH "${AIRSIM_ROOT}/cmake/cmake-modules")
 LIST(APPEND CMAKE_MODULE_PATH "${RPC_SOURCE_DIR}/cmake")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -53,7 +63,7 @@ else ()
     )
 endif ()
 
-target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT}  -lstdc++ -lpthread -lboost_filesystem)
+target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT}  -lstdc++ -lpthread ${Boost_LIBRARIES})
 
 
 
