--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       ./setup.sh;
       ./build.sh;
-      cd Unity && ./build.sh;
+      cd Unity && ./build.sh 2> /dev/null;
     elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
       export PATH=$MSBUILD_PATH:$PATH_FIX:$PATH;
       cmd.exe /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" amd64 &&
