--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       ./setup.sh;
       ./build.sh;
-      cd Unity && ./build.sh 2> /dev/null;
+      cd Unity && ./build.sh 2> Unity_error.txt;
+      tail -n 100 Unity/Unity_error.txt;
     elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
       export PATH=$MSBUILD_PATH:$PATH_FIX:$PATH;
       cmd.exe /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" amd64 &&
@@ -58,5 +59,6 @@ script:
     elif  [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       ./setup.sh;
       ./build.sh;
-      cd Unity && ./build.sh 2> /dev/null;
+      cd Unity && ./build.sh 2> Unity_error.txt;
+      tail -n 100 Unity/Unity_error.txt;
     fi
