--- a/Unreal/Environments/Blocks/Config/DefaultGame.ini
+++ b/Unreal/Environments/Blocks/Config/DefaultGame.ini
@@ -12,7 +12,7 @@ ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "F31D7C524A9E9BC66DD
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 StagingDirectory=(Path="C:/temp")
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -43,5 +43,4 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/AirSimAssets")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
